ZCS-14356:Upgraded PHP to 8.3.0

--- a/conf/httpd.conf
+++ b/conf/httpd.conf
@@ -145,7 +145,7 @@ LoadModule dir_module /opt/zimbra/common/lib/apache2/modules/mod_dir.so
 LoadModule alias_module /opt/zimbra/common/lib/apache2/modules/mod_alias.so
 #LoadModule rewrite_module /opt/zimbra/common/lib/apache2/modules/mod_rewrite.so
 LoadModule mpm_event_module /opt/zimbra/common/lib/apache2/modules/mod_mpm_event.so
-LoadModule php7_module        /opt/zimbra/common/lib/apache2/modules/libphp7.so
+LoadModule php_module        /opt/zimbra/common/lib/apache2/modules/libphp.so
 
 <IfModule unixd_module>
 #
@@ -493,3 +493,5 @@ SSLRandomSeed startup builtin
 SSLRandomSeed connect builtin
 </IfModule>
 
+ServerSignature Off
+ServerTokens Prod
